<resources>
    <string name="app_name">Asobi</string>
    <string name="action_settings">Settings</string>

    <!-- Vector paths -->
    <string name="chip_dot_path" translatable="false">M12,8l0,0c-2.21,0 -4,1.79 -4,4c0,2.21 1.79,4 4,4c2.21,0 4,-1.79 4,-4c0,-2.21 -1.79,-4 -4,-4l0,0z</string>
    <string name="chip_check_path" translatable="false">M9,16.2l-4.2,-4.2c0,0 -1.4,1.4 -1.4,1.4c0,0 5.6,5.6 5.6,5.6c0,0 12,-12 12,-12c0,0 -1.4,-1.4 -1.4,-1.4l-10.6,10.6z</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="base_fragment_label">Base Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="popular_comics">Popular comics</string>
    <string name="action_back">back</string>
    <string name="menu_item_home">home</string>
    <string name="menu_item_favourites">favourites</string>
    <string name="menu_item_search">search</string>
    <string name="menu_item_settings">settings</string>
    <string name="action_search">search comics</string>
    <string name="error_state_title">Shucks! X_x</string>
    <string name="empty_title">Data was empty, try retrying by pulling up the swipe-refresh listener/choose another genre</string>
    <string name="empty_subtitle">Our elves failed to find data relating to your action; Try retrying or search for something.</string>
    <string name="cd_retry">retry</string>
    <string name="network_error_msg">Loading of comics failed due to network error; check your internet connection</string>
    <string name="ongoing_comics">Ongoing comics</string>
    <string name="completed_comics">Completed comics</string>
    <string name="latest_comics">Latest comics</string>
    <string name="filter_comics_by_genre">filter comics by genre</string>
    <string name="filter_by_string">Filter by genre</string>
    <string name="reset_filters_string">reset</string>
    <string name="collapse_arrow_desc">Lower Filter By Genre Sheet</string>
    <string name="comics_by_genre"> Comics By Genre</string>
    <string name="more_string">see all</string>
    <string name="discover">Discover</string>
    <string name="refresh">refresh</string>
    <string name="loading_msg">Loading please wait</string>
    <string name="refreshing_message">Refreshing please wait :D</string>
    <string name="filter">filter</string>
    <string name="menu_item_library">your library</string>
    <string name="error_image">error image</string>
    <string name="discover_screen">discover_screen</string>
    <string name="search_screen">Search comics</string>
    <string name="latest_screen">latest screen</string>
    <string name="popular_screen">popular screen</string>
    <string name="ongoing_comics_screen">ongoing screen</string>
    <string name="completed_screen">completed screen</string>
    <string name="by_genre_screen">by genre screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_library_screen">Your library</string>
    <string name="settings_button">settings button</string>
    <string name="notifications_button">notifications button</string>
    <string name="domain_name">viewcomics</string>
    <string name="good_morning">"Good morning "</string>
    <string name="good_afternoon">Good afternoon :-)</string>
    <string name="good_evening">Good evening :XD</string>
    <string name="search_label">Search</string>
    <string name="search_comics_hint">Search comics,or series</string>
    <string name="search_explanation">Read what you love</string>
    <string name="search_explanation_subtitle">Search for comics issues, series and much more.</string>
    <string name="search_empty_title">Shucks! Our elves did not find a comic book with such name ; try searching for something else</string>
    <string name="no_search_query">You did not search for anything</string>
    <string name="search_query">search query</string>
    <string name="browse_all">Browse all</string>
    <string name="marvel">Marvel</string>
    <string name="dc_comics">Dc</string>
    <string name="terror_town">Terror town</string>
</resources>