<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/matte"
    android:fitsSystemWindows="true">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fitsSystemWindows="true">
       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/search_label"
           android:textColor="@color/white"
           android:id="@+id/searchLabel"
           android:layout_margin="24dp"
           android:textAppearance="@style/TextAppearance.Asobi.Headline5"/>


       <com.google.android.material.button.MaterialButton
           android:layout_width="match_parent"
           android:layout_height="65dp"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="@dimen/margin_normal"
           android:layout_marginStart="@dimen/margin_normal"
           android:layout_marginEnd="@dimen/margin_normal"
           app:backgroundTint="@color/white"
           app:iconGravity="start"
           android:id="@+id/search_button"
           app:iconSize="30dp"
           android:textAllCaps="false"
           app:icon="@drawable/ic_baseline_search_24"
           app:iconTint="@color/black"
           android:textAlignment="textStart"
           android:text="@string/search_comics_hint"
           android:textColor="@color/davy_grey"
           android:textSize="18sp"
           android:contentDescription="@string/search_comics_hint"
           app:layout_constraintTop_toBottomOf="@id/searchLabel"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        android:textAppearance="@style/TextAppearance.Asobi.Label"
        android:id="@+id/genre_label"
        android:text="@string/browse_all"/>
       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/genre_label"
           app:layout_constraintBottom_toBottomOf="parent"
           tools:listitem="@layout/genre_comic_item"
           android:layout_marginTop="@dimen/margin_small"
           android:id="@+id/genres_recyclerview"
           app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
           app:spanCount="2"/>
   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>