<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_sheet"
    android:background="?attr/colorSurface"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    tools:targetApi="lollipop">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_header_height"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/genre_bottom_sheet_peek_height"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_genre_filters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/margin_normal"
        android:nestedScrollingEnabled="false"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        android:paddingVertical="@dimen/spacing_normal"
        android:alpha="0"
        tools:listitem="@layout/selectable_filter_chip_item"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_header_height"
        android:scrollbars="vertical"
        tools:alpha="1f"
       />
    <View
        android:id="@+id/filters_header_shadow"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:alpha="0"
        tools:alpha="1f"
        android:background="@drawable/filters_sheet_header_shadow"
        android:stateListAnimator="@animator/active_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_header_height"
        tools:targetApi="lollipop" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:alpha="1f"
        android:id="@+id/filter_sheet_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guide_header_height"
        tools:text="@string/filter_by_string"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_filter_btn"
        android:layout_marginStart="@dimen/spacing_normal"
        android:minWidth="0dp"
        tools:alpha="1f"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guide_header_height"
        tools:visibility="visible"
        android:text="@string/reset_filters_string"
        style="?borderlessButtonStyle"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/ally_min_touch_target"
        android:layout_height="@dimen/ally_min_touch_target"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="center"
        android:id="@+id/collapse_arrow"
        android:src="@drawable/ic_expand_more"
        android:tint="?attr/colorControlNormal"
        android:contentDescription="@string/collapse_arrow_desc"
        app:layout_constraintBottom_toTopOf="@id/guide_header_height"/>
</androidx.constraintlayout.widget.ConstraintLayout>